--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <!-- CALL TO ACTION-->
  <link rel="stylesheet" href="style.css">
  <div class="button-container">
-  <a href="navbat.html" class="animated-button">Tentang Aku</a>
+  <a href="navbar.html" class="animated-button">Tentang Aku</a>
  </div>
  <!-- END CALL TO ACTION -->
 </body>
